# Kirikiroid2

src/: krkr2.podspec
src/core/: CMakeLists.txt
src/core/base/: ScriptMgnIntf.cpp  SysInitIntf.cpp  UtilStreams.cpp
src/core/base/win32/: StorageImpl.cpp  SysInitImpl.cpp
src/core/environ/: Application.cpp  XP3ArchiveRepack.cpp
src/core/environ/ConfigManager/: GlobalConfigManager.cpp  LocaleConfigManager.cpp
src/core/environ/apple/: Platform.mm
src/core/environ/cocos2d/: AppDelegate.cpp  CCKeyCodeConv.cpp  CustomFileUtils.cpp  MainScene.cpp  TVPAppDelegate.cpp
src/core/environ/linux/: Platform.cpp
src/core/environ/ui/: BaseForm.cpp  FileSelectorForm.cpp  FileSelectorForm.h  MainFileSelectorForm.cpp  PreferenceForm.cpp  SimpleMediaFilePlayer.cpp
src/core/environ/ui/extension/: UIExtension.cpp
src/core/environ/win32/: ApplicationSpecialPath.h
src/core/movie/ffmpeg/: VideoCodecFFmpeg.cpp
src/core/sound/: FFWaveDecoder.cpp  xmmlib.h
src/core/sound/win32/: WaveMixer.cpp
src/core/tjs2/: tjsConfig.cpp  tjsVariantString.cpp
src/core/utils/minizip/: ioapi.cpp
src/core/visual/: FontImpl.cpp  FreeType.cpp  FreeTypeFace.h  KrkrFreeType.h
src/core/visual/ARM/: tvpgl_arm.cpp
src/core/visual/gl/: aligned_allocator.h
src/core/visual/ogl/: etcpak.cpp  ogl_common.h
src/core/visual/win32/: LayerBitmapImpl.cpp
